syntax = "proto3";

package account_receivable_share_folder.service.v1;
option go_package = "./pb";

message HealthCheckRequest {}
message HealthCheckResponse {
    string message = 1;
}

message ErrorBodyResponse{
    bool error = 1;
    uint32 code = 2;
    string message = 3;
}

message File {
    string filename = 1;
    string extension = 2;
    string ftp_port = 3;
    string ftp_host = 4;
    string ftp_username = 5;
    string ftp_password = 6;
    string ftp_folder_input = 7;
    string ftp_folder_output = 8;
    string ftp_receipt = 9;
    bool stp_status = 10;
    bool nstp_status = 11;
    bool is_maker_confirmation = 12;
    string file_protocol = 13;
}

message UserData {
    uint64 user_id = 1;
    string username = 2;
    uint64 company_id = 3;
    uint64 holding_id = 4;
    string company_name = 5;
    string user_type = 6;
    repeated string authorities = 7;
    repeated uint64 group_ids = 8;
    repeated uint64 role_ids = 9;
    string session_id = 10;
    string date_time = 11;
    string token_created_at = 12;
    string id_token = 13;
}

message FileData {
    bytes file_data = 1;
    bool stp_status = 2;
    bool nstp_status = 3;
    bool is_maker_confirmation = 4;
}